fixed spacing

--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -45,10 +45,10 @@
   height: 10vh;
   display: flex;
   /* justify-content: center; */
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 600;
   padding-left: 10px;
-  /* width: 38vw; */
+  width: 37vw;
 }
 
 .project-links {
